# Project-Management-Agent

./: .env.example  .gitignore  .project-structure.md  ADAPTIVE_APPROACH_SUPERIOR.md  ADAPTIVE_CONTEXT_LIMITS.md  ADAPTIVE_ROUTING_ARCHITECTURE.md  AGENT_CODEBASE_LEARNING.md  AI_AGENT_NOT_CALLING_TOOLS_ISSUE.md  ANALYSIS_BLOCK_RESIZE_FIX_PLAN.md  ANALYTICS_ABSTRACTION_ARCHITECTURE.md  ANALYTICS_INTEGRATION_COMPLETE.md  ANALYTICS_QUICKSTART.md  ANALYTICS_TOOLS_IMPLEMENTATION_PLAN.md  API_KEY_FIX.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_REVIEW.md  AUTOMATIC_ESCALATION_FIX.md  AUTONOMOUS_LOOP_ANALYSIS.md  AUTONOMOUS_LOOP_IMPLEMENTATION_COMPLETE.md  BACKGROUND_INVESTIGATION_EXPLAINED.md  BUILD_SYSTEM_OVERVIEW.md  CHANGES_SUMMARY.md  CODEBASE_LEARNING_SUMMARY.md  CONTEXT_COMPRESSION_FIX.md  CONTEXT_COMPRESSION_NOT_USED.md  CONTEXT_INTEGRATION_PLAN.md  CONTEXT_OPTIMIZATION_STRATEGY.md  CONTEXT_OPTIMIZER_TOKEN_LIMIT_VERIFICATION.md  CRASH_FIXES.md  CURSOR_STYLE_THOUGHT_DISPLAY.md  DEBUG_LOG_ANALYSIS.md  DUPLICATE_PLAN_CONTENT_FIX.md  DUPLICATE_PLAN_DISPLAY_FIX.md  DUPLICATE_REPORTER_FIX.md  DUPLICATE_RESEARCH_BLOCK_FIX.md  DUPLICATE_STEPS_ANALYSIS.md  DUPLICATE_STEPS_FIX.md  DUPLICATE_STEPS_FIX_V2.md  (+144 more)
Antigravity/: 01_system_overview.md  02_backend_components.md  03_frontend_architecture.md  04_api_reference.md  05_deployment_guide.md  06_developer_guide.md  07_workflows_and_dataflows.md  README.md  architecture_deep_dive.html  architecture_deep_dive.md  codebase_overview.md  developer_quick_reference.md  learning_guide.md  visual_cheat_sheet.md
api/: main.py
backend/: workflow.py
bugbase_mcp_server/: README.md  requirements.txt  run_mcp.sh  server.py  stdio_wrapper.py
config/: README.md  development.yaml  production.yaml
database/: ai_provider_schema.sql  bugbase_schema.sql  connection.py  crud.py  mcp_server_schema.sql  models.py  orm_models.py  schema.sql  seed_providers.sql
docs/: ANALYSIS_TYPES_CONFIGURATION.md  ANALYTICS_IMPLEMENTATION_PLAN.md  ANALYTICS_QUICKSTART.md  API.md  ARCHITECTURE_FLOW.md  ARCHITECTURE_SEPARATION.md  Agent.md  BUGFIX_OPTION2_ISSUES.md  CHART_DATA_FLOW.md  COMPLETE_USER_FLOW_CURSOR.md  CURSOR_CREDENTIAL_COLLECTION.md  CURSOR_ONLY_FLOW_NO_WEB_UI.md  CURSOR_SETUP_COMPLETE.md  DEBUG_BURNDOWN.md  DEERFLOW_MCP_INTEGRATION.md  DOCKER_DESKTOP_MCP_ALTERNATIVE.md  DOCKER_DESKTOP_MCP_INTEGRATION.md  DOCKER_DESKTOP_MCP_SETUP.md  DOCKER_URL_CONVERSION.md  EXACT_CURSOR_USAGE.md  FULL_TEST_RESULTS_OPTION2.md  HOW_MCP_SERVER_LOADS_CREDENTIALS.md  HOW_TO_ADD_JIRA_CREDENTIALS.md  HOW_TO_IDENTIFY_AGENT_USAGE.md  (+51 more)
src/: workflow.py  (+1 more)
(+954 files in other folders)
